[package]
name = "LD44"
version = "0.2.14"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
description = "Our Ludum Dare 44 Game Jam Entry"

[dependencies]
amethyst   = { version = "0.10.0", features = ["sdl_controller"] }
base64     = "0.10.1"
bitflags   = "=1.0.4"  # https://github.com/rust-lang/rust/issues/59134#issuecomment-489430178
json       = "0.11.13"
rand       = "0.6.5"
regex      = "1.1.5"
ron        = "0.4.2"
serde      = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"

deathframe = "0.1.4"
climer     = { version = "0.3.6", features = ["serialize"] }

[replace]
"lewton:0.9.4" = { git = "https://github.com/Noah2610/lewton", branch = "custom-0.9.3" } # cross-compilation to windows doesn't work with lewton 0.9.4

[profile.dev]
opt-level        = 1
debug            = true
lto              = false
debug-assertions = true
codegen-units    = 16
incremental      = true
overflow-checks  = true

[profile.release]
opt-level        = 3
debug            = false
lto              = false
debug-assertions = false
codegen-units    = 1
incremental      = true
overflow-checks  = false
